--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "del": "^1.2.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-html-replace": "^1.5.0",
     "gulp-less": "^3.0.3",
     "gulp-load-plugins": "^0.10.0",
