--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-plumber": "^1.0.1",
     "gulp-rev": "^4.0.0",
     "gulp-rev-replace": "^0.4.1",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-webserver": "^0.9.1"
   }
